--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "express-handlebars": "^8.0.3",
@@ -20,6 +21,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.15.1",
     "mongoose-paginate-v2": "^1.9.1",
+    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
